--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.18.0",
+    "@upstash/ratelimit": "^0.4.3",
     "@upstash/redis": "^1.20.6",
     "eslint-config-next": "13.0.3",
     "framer-motion": "^7.6.7",
