--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "framer-motion": "^7.6.7",
     "next": "13.0.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1"
   },
   "devDependencies": {
     "@cloudflare/next-on-pages": "^0.5.0",
